# Codex-NN

./: .gitattributes  .gitignore  LICENSE  README.en.md  README.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  theme-lab.html  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
docs/: testing-and-release-gate.md  theme-package-v1.md
plugin/claude-code-theme-designer/: .mcp.json.template
plugin/codex-nn-theme-designer/: .mcp.json  .mcp.json.template  marketplace.json
scripts/: CodexNN.nsi  build-desktop.sh  prepare-release.mjs  validate-release-assets.mjs  validate-release-assets.py
src/: app-dialog.ts  i18n-marketplace.ts  i18n.ts  main.ts  marketplace.ts  styles.css  theme-lab.css  theme-lab.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/theme-engine/: nn-theme.css  renderer-inject.js
src-tauri/src/: agent_api.rs  app_icon.rs  cdp.rs  cdp_session.rs  claude_theme_designer_plugin.rs  codex.rs  codex_macos.rs  codex_windows.rs  dream_skin.rs  integration_tests.rs  lib.rs  locale.rs  main.rs  models.rs  paths.rs  plugin_mcp.rs  runtime.rs  theme.rs  theme_designer_plugin.rs
src-tauri/src/marketplace/: client.rs  grants.rs  mod.rs  preview.rs  sync.rs  types.rs
tests/frontend/: app-dialog.test.ts  dream-skin-compat.test.ts  i18n.test.ts  main.test.ts  marketplace.test.ts  theme-engine.test.ts
tests/python/: test_package_theme.py
theme-packs/adventure-atlas/: theme.en.json  theme.json
theme-packs/azure-neon-frontier/: theme.en.json  theme.json
theme-packs/caishen-readable/: theme.en.json  theme.json
theme-packs/miku-future-collab/: theme.en.json  theme.json
theme-packs/portal-dimension-lab/: theme.en.json  theme.json
theme-packs/strawberry-starlight/: theme.en.json  theme.json
(+10 files in other folders)
