[package]
name = "codex-nn"
version = "0.1.0"
description = "Codex 暖暖，一键为官方 Codex Desktop 应用主题"
authors = ["slovx2"]
license = "MIT"
edition = "2021"
default-run = "codex-nn"

[lib]
name = "codex_nn_lib"
crate-type = ["rlib"]

[[bin]]
name = "codex-nn"
path = "src/main.rs"

[build-dependencies]
serde_json = "=1.0.150"
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
axum = "=0.8.9"
base64 = "=0.22.1"
chrono = { version = "=0.4.45", features = ["clock", "serde"] }
dirs = "=6.0.0"
futures-util = "=0.3.31"
image = { version = "=0.25.10", default-features = false, features = ["jpeg", "png", "tiff", "webp"] }
plist = "=1.10.0"
reqwest = { version = "=0.12.28", default-features = false, features = ["json", "rustls-tls"] }
roxmltree = "=0.21.1"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
sha2 = "=0.10.9"
sysinfo = "=0.39.6"
tauri = { version = "=2.11.3", features = ["tray-icon"] }
tauri-plugin-dialog = "=2.7.1"
tauri-plugin-process = "=2.3.1"
tauri-plugin-single-instance = "=2.4.2"
tauri-plugin-updater = "=2.10.1"
tokio = { version = "=1.52.3", features = ["macros", "rt-multi-thread", "sync", "time", "net", "fs", "process"] }
tokio-tungstenite = "=0.29.0"
toml_edit = "=0.25.12"
url = "=2.5.8"
uuid = { version = "=1.19.0", features = ["v4", "serde"] }
zip = { version = "=8.1.0", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "=0.62.2", features = [
  "Win32_Foundation",
  "Win32_NetworkManagement_IpHelper",
  "Win32_Networking_WinSock",
  "Win32_Storage_Packaging_Appx",
  "Win32_System_Threading"
] }

[dev-dependencies]
tempfile = "=3.23.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
